scripts/nullaway/wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8.txt
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/P042.java:21: error: [NullAway] dereferenced expression this.getWords() is @Nullable
        this.setEndIndex(this.getWords().size() - 1);
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/P042.java:58: error: [NullAway] dereferenced expression this.getWords() is @Nullable
            if (this.isTriangleWord(this.getWords().get(i))) {
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/P042.java:78: error: [NullAway] dereferenced expression this.getWords() is @Nullable
        this.getWords().add("A");
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/P040.java:66: error: [NullAway] dereferenced expression this.getIndices() is @Nullable
            if (this.getIndices().contains(current)) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:63: error: [NullAway] dereferenced expression this.getTriangle().get(i) is @Nullable
                this.getTriangle().get(i)[j] += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:63: error: [NullAway] dereferenced expression this.getTriangle().get(i + 1) is @Nullable
                this.getTriangle().get(i)[j] += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:63: error: [NullAway] dereferenced expression this.getTriangle().get(i + 1) is @Nullable
                this.getTriangle().get(i)[j] += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:66: error: [NullAway] dereferenced expression this.getTriangle().get(0) is @Nullable
        return this.getTriangle().get(0)[0];
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P011.java:33: error: [NullAway] dereferenced expression this.getGrid() is @Nullable
        this.setEndRow(this.getGrid().length - NUMBERS_TO_SUM);
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P011.java:123: error: [NullAway] dereferenced expression this.getGrid() is @Nullable
                    rightProduct *= this.getGrid()[row][column + loop];
                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P014.java:58: error: [NullAway] dereferenced expression this.getChainLengths() is @Nullable
        this.getChainLengths()[1] = 1;
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P014.java:73: error: [NullAway] dereferenced expression this.getChainLengths() is @Nullable
        if (value < this.getChainLengths().length && this.getChainLengths()[(int) value] != 0) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/CommonTest.java:146: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            assertTrue(e.getMessage().contains("non-negative"));
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/CommonTest.java:161: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            assertTrue(e.getMessage().contains("39"));
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P022.java:22: error: [NullAway] dereferenced expression this.getNames() is @Nullable
        this.setEnd(this.getNames().length);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P022.java:60: error: [NullAway] dereferenced expression this.getNames() is @Nullable
            sum += (i + 1) * this.calculateAlphabetScoreOfName(this.getNames()[i]);
                                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P028.java:45: error: [NullAway] dereferenced expression this.getNumberSquare() is @Nullable
            sum += this.getNumberSquare()[i][i];
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P028.java:60: error: [NullAway] dereferenced expression this.getNumberSquare() is @Nullable
            this.getNumberSquare()[i][j] = currentValue;
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P031.java:53: error: [NullAway] enhanced-for expression this.getCoins() is @Nullable
        for (int coin : this.getCoins()) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P024.java:78: error: [NullAway] dereferenced expression this.getRemainingDigits() is @Nullable
            this.getRemainingDigits().add(i);
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P024.java:91: error: [NullAway] dereferenced expression this.getRemainingDigits() is @Nullable
        while (this.getRemainingDigits().size() > 1) {
                                        ^
    (see http://t.uber.com/nullaway )
21 errors
